--- a/.github/workflows/astro_build.yml
+++ b/.github/workflows/astro_build.yml
@@ -1,4 +1,4 @@
-name: Eleventy Build
+name: Astro Build
 
 on:
   push:
@@ -24,5 +24,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-          publish_dir: ./docs
+          publish_dir: ./dist
           cname: farma.tw
