add tailwindcss/typography for post content

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,8 @@
       "@components/*": ["src/components/*"],
       "@assets/*": ["public/assets/*"],
       "@layouts/*": ["src/layouts/*"],
+      "@pages/*": ["src/pages/*"],
+      "@styles/*": ["src/styles/*"],
     }
   }
 }
