--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "astro": "^1.9.0",
     "autoprefixer": "^10.4.7",
     "canvas-confetti": "^1.5.1",
+    "clsx": "^1.2.1",
     "postcss": "^8.4.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.0.24"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9"
   }
 }
