--- a/package.json
+++ b/package.json
@@ -14,12 +14,10 @@
     "@astrojs/mdx": "^0.14.0",
     "@astrojs/react": "^1.2.2",
     "@astrojs/tailwind": "^2.1.3",
-    "@types/canvas-confetti": "^1.4.3",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "astro": "^1.9.0",
     "autoprefixer": "^10.4.7",
-    "canvas-confetti": "^1.5.1",
     "clsx": "^1.2.1",
     "postcss": "^8.4.14",
     "react": "^18.2.0",
@@ -27,6 +25,7 @@
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
+    "@igor.dvlpr/astro-post-excerpt": "^1.1.1",
     "@tailwindcss/typography": "^0.5.9"
   }
 }
