--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "@example/with-tailwindcss",
+  "name": "farma-huang.github.io",
   "type": "module",
   "version": "0.0.1",
   "private": true,
+  "packageManager": "pnpm@9.15.0",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -11,21 +12,21 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^0.14.0",
-    "@astrojs/react": "^1.2.2",
-    "@astrojs/tailwind": "^2.1.3",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
-    "astro": "^1.9.0",
-    "autoprefixer": "^10.4.7",
-    "clsx": "^1.2.1",
-    "postcss": "^8.4.14",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwindcss": "^3.0.24"
+    "@astrojs/mdx": "^4.0.0",
+    "@astrojs/react": "^4.0.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "astro": "^5.17.0",
+    "autoprefixer": "^10.4.20",
+    "clsx": "^2.1.1",
+    "postcss": "^8.4.49",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^4.1.0"
   },
   "devDependencies": {
     "@igor.dvlpr/astro-post-excerpt": "^1.1.1",
-    "@tailwindcss/typography": "^0.5.9"
+    "@tailwindcss/typography": "^0.5.16",
+    "@tailwindcss/vite": "^4.1.18"
   }
 }
