--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
   "dependencies": {
     "@astrojs/mdx": "^4.0.0",
     "@astrojs/react": "^4.0.0",
+    "@fontsource/inter": "^5.2.8",
+    "@fontsource/jetbrains-mono": "^5.2.8",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "astro": "^5.17.0",
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.33.0",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.0"
   },
   "devDependencies": {
